[OBMIN-287] Introduced Java 19, cleanup the code from Heroku configs (#471)